--- a/index.html
+++ b/index.html
@@ -55,31 +55,28 @@
         <p>Nós somos uma empresa com soluções completas de brindes corporativos e produtos personalizados</p>
 
         <!-- WhatsApp -->
-        <a class="button button-whatsapp" href="/whatsapp" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/whatsapp.svg" alt="">WhatsApp 11 91239-4099</a><br>
+        <a class="button button-whatsapp" href="https://wa.me/5511912394099" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/whatsapp.svg" alt="">WhatsApp 11 91239-4099</a><br>
 
         <!-- Site Corporativo -->
-        <a class="button button-default" href="/site" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-homepage.svg" alt="">Visite Nosso Site</a><br>
+        <a class="button button-default" href="https://corp.viaarto.com.br/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-homepage.svg" alt="">Visite Nosso Site</a><br>
 
         <!-- Catalogo de Produtos -->
-        <a class="button button-default" href="/catalogo" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Catálogo de Produtos</a><br>
+        <a class="button button-default" href="https://catalogo.viaartocorp.com.br/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Catálogo de Produtos</a><br>
 
         <!-- LinkedIn -->
-        <a class="button button-linked" href="/linkedin" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/linkedin.svg" alt="">LinkedIn</a><br>
+        <a class="button button-linked" href="https://www.linkedin.com/company/viaarto/about/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/linkedin.svg" alt="">LinkedIn</a><br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="/instagram" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
-
-        <!-- Generic Phone -->
-        <a class="button button-default" href="https://link.viaartocorp.com.br/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-phone.svg" alt="">Ligue para nós</a><br>
+        <a class="button button-instagram" href="https://www.instagram.com/viaartobr" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Siga nosso Instagram @viaartobr</a><br>
 
         <!-- Cal.com -->
-        <a class="button button-cal" href="/agenda" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cal.svg" alt="">Agende uma conversa</a><br>
+        <a class="button button-cal" href="https://cal.com/viaarto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cal.svg" alt="">Agende uma conversa</a><br>
 
         <!-- Peça Seu Orçamento Por Email -->
         <a class="button button-default" href="mailto:corporativo@viaarto.com.br target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email-alt.svg" alt="">Envie um e-mail</a><br>
 
         <!-- Generic Blog -->
-        <a class="button button-default" href="/blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-blog.svg" alt="">Visite Nosso Blog</a><br>
+        <a class="button button-default" href="https://corp.viaarto.com.br/blog/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-blog.svg" alt="">Visite Nosso Blog</a><br>
 
         <!-- Generic Map 
         <a class="button button-default" href="/mapa" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-map.svg" alt="">Nosso Endereço</a><br>
