update meta tags

--- a/index copy 2.html
+++ b/index copy 2.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
 
-  <!-- Page Information -->
+  <!-- Page Information
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Via Arto - Brindes Corporativos</title>
-  <meta name="description" content="Via Arto oferece soluções completas em brindes corporativos e produtos personalizados. Explore nosso catálogo e personalize seu brinde hoje.">
+  <meta name="description" content="Via Arto - Brindes Corporativos">
   <meta name="author" content="Valdecir Carvalho">
-  <link rel="canonical" href="https://corp.viaarto.com.br/">
-  
-  <!-- Mobile Specific Metas -->
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://corp.viaarto.com.br/">
-  <meta property="og:title" content="Via Arto - Brindes Corporativos">
-  <meta property="og:description" content="Via Arto oferece soluções completas em brindes corporativos e produtos personalizados. Explore nosso catálogo e personalize seu brinde hoje.">
-  <meta property="og:image" content="https://corp.viaarto.com.br/images/hero/hero_viaarto_corp-01.jpg">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://corp.viaarto.com.br/">
-  <meta name="twitter:title" content="Via Arto - Brindes Corporativos">
-  <meta name="twitter:description" content="Via Arto oferece soluções completas em brindes corporativos e produtos personalizados. Explore nosso catálogo e personalize seu brinde hoje.">
-  <meta name="twitter:image" content="https://corp.viaarto.com.br/images/hero/hero_viaarto_corp-01.jpg">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -61,7 +49,7 @@
 
         <!-- Title -->
         <h1 role="heading">Via Arto</h1>
-        <h2 role="heading">Brindes Corporativos</h2>
+        <h1 role="heading">Brindes Corporativos</h1>
 
         <!-- Short Bio -->
         <p>Nós somos uma empresa com soluções completas de brindes corporativos e produtos personalizados</p>
@@ -85,7 +73,7 @@
         <a class="button button-cal" href="https://cal.com/viaarto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cal.svg" alt="">Agende uma conversa</a><br>
 
         <!-- Peça Seu Orçamento Por Email -->
-        <a class="button button-default" href="mailto:corporativo@viaarto.com.br" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email-alt.svg" alt="">Envie um e-mail</a><br>
+        <a class="button button-default" href="mailto:corporativo@viaarto.com.br target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email-alt.svg" alt="">Envie um e-mail</a><br>
 
         <!-- Generic Blog -->
         <a class="button button-default" href="https://corp.viaarto.com.br/blog/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-blog.svg" alt="">Visite Nosso Blog</a><br>
